--- a/images/configuration.json
+++ b/images/configuration.json
@@ -17,51 +17,28 @@
   "provisioners": [
     {
       "type": "file",
-      "source": "scripts/security.sh",
-      "destination": "/tmp/security.sh"
+      "source": "custom/file",
+      "destination": "/tmp/file"
     },
     {
       "type": "shell",
+      "execute_command": "echo 'ubuntu'|sudo -S sh '{{.Path}}'",
       "override": {
         "amazon-ebs": {
           "scripts": [
+            "scripts/security.sh"
           ]
         }
       }
+    },
+    {
+      "type": "shell",
       "inline": [
         "sleep 30",
         "sudo apt-add-repository ppa:rquillo/ansible",
         "sudo /usr/bin/apt-get update",
         "sudo /usr/bin/apt-get -y install ansible"
       ]
-    },
-    {
-      "type": "ansible-local",
-      "playbook_file": "provision.yml"
     }
   ]
 }
-
-
-{  
-      "type": "shell",
-      "execute_command": "echo 'vagrant'|sudo -S sh '{{.Path}}'",
-      "override": {
-        "virtualbox-iso": {
-          "scripts": [
-            "scripts/base.sh",
-            "scripts/sandbox-vagrant-user-settings.sh",
-            "scripts/virtualbox-configurations.sh",
-            "scripts/trp-custom-configurations.sh",
-            "scripts/install-and-configure-eclipse-luna.sh",
-            "scripts/custom-sandbox-security-settings.sh",
-            "scripts/websphere7-base-install.sh",
-            "scripts/websphere7-updi-install.sh",
-            "scripts/websphere7-fixpack-install.sh",
-            "scripts/sandbox-tooling-configurations.sh",
-            "scripts/sandbox-developer-user-settings.sh",
-            "scripts/cleanup.sh"
-          ]
-        }
-      }
-    }
